--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,10 +33,14 @@ nav.main-nav ul li a:hover{
     background-repeat: no-repeat;
     text-align: -webkit-center;
     background-size: contain;
+        width: 400px;
+    
 }
 .head-main-image img{
     position: relative;
+    width: 100%;
 }
+
 .inner-header-content h1 {
     font-size: 50px;
     line-height: 1.3;
@@ -134,6 +138,9 @@ a.DownloadCV-btn:hover{
     background-size: contain;
     text-align: center;
     background-position: center;
+}
+.about-model-img img {
+    width: 100%;
 }
 h1.sec-head {
     position: relative;
@@ -686,6 +693,13 @@ box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) inset;
   /* resposnsive */
 
   @media screen and (max-width:767px){
+    .head-main-image{
+        width: 100%;
+    }
+    .about-model-img {
+        width: 100% !important;
+    }
+
     .html-progress, .css-progress, .react-progress, .bs-progress, .js-progress, .git-progress {
         width: 100%;
     }
@@ -723,7 +737,7 @@ box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) inset;
         font-size: 29px;
     }
     .about-model-img img {
-        width: 80%;
+        width: 100%;
     }
     .about-model-img {
         background-size: cover;
